--- a/portofolio.html
+++ b/portofolio.html
@@ -35,7 +35,7 @@
         <a href="index.html" class="logo">Samuel Hasibuan</a>
         <nav>
             <a href="portofolio.html" class="active link">Home</a>
-            <a href="#" class="link">Service</a>
+            <a href="#" class="link">Project</a>
             <a href="skilss.html" class="link">Skills</a>
             <a href="education.html" class="link">Education</a>
             <a href="#" class="link">Experience</a>
@@ -67,7 +67,7 @@
 
             // Mulai efek mengetik
             const paragraph = document.getElementById('typing-paragraph');
-            const text = "Lorem ipsum odor amet, consectetuer adipiscing elit. Massa suspendisse urna maecenas orci, mauris enim accumsan. Penatibus pretium sed semper rutrum sodales odio dui.";
+            const text = "I am a third-year Informatics Engineering student with a strong passion for web development and programming. I am proficient in creating dynamic websites using technologies such as HTML, Tailwind, Bootstrap, JavaScript, and PHP, as well as framework like Vue.js and Laravel. Additionally, i have experience with kotlin and familiar with Android application development. I am always eager to expand my knowledge and skills, and exited to contribute to innovative project that challenge and enhance my technical abilities.";
             let index = 0;
 
             function type() {
