--- a/education.html
+++ b/education.html
@@ -195,16 +195,16 @@
     </header>
     <section class="education">
         <div class="education-item">
-            <h3>Bachelor of Computer Science</h3>
-            <p>XYZ University, 2017 - 2021</p>
+            <h3>Junior High School Diploma</h3>
+            <p>SMP Swasta Panti Budaya Kisaran, 2012 - 2018</p>
         </div>
         <div class="education-item">
             <h3>High School Diploma</h3>
-            <p>ABC High School, 2014 - 2017</p>
+            <p>SMA Swasta Advent Air Bersih Medan, 2018 - 2021</p>
         </div>
         <div class="education-item">
-            <h3>Web Development Certification</h3>
-            <p>Online Course, 2022</p>
+            <h3>Bachelor of Computer Science</h3>
+            <p>Advent University of Indonesia, 2022 - 2026</p>
         </div>
     </section>
 
