--- a/education.html
+++ b/education.html
@@ -186,7 +186,7 @@
         <a href="portofolio.html" class="logo">Samuel Hasibuan</a>
         <nav>
             <a href="portofolio.html" class="link">Home</a>
-            <a href="#" class="link">Service</a>
+            <a href="#" class="link">Project</a>
             <a href="skilss.html" class="link">Skills</a>
             <a href="education.html" class="active link">Education</a>
             <a href="#" class="link">Experience</a>
