--- a/skilss.html
+++ b/skilss.html
@@ -176,7 +176,7 @@
 
         <nav>
             <a href="index.html" class="link">Home</a>
-            <a href="#" class="link">Service</a>
+            <a href="#" class="link">Project</a>
             <a href="#" class="active link">Skills</a>
             <a href="education.html" class="link">Education</a>
             <a href="#" class="link">Experience</a>
